--- a/style.css
+++ b/style.css
@@ -14,12 +14,20 @@ button {
 }
 html,
 body {
+    position: relative;
     background-color: #000;
     color: #fff;
     font-family: "Inter", sans-serif;
     margin: 0;
     height: 100%;
+    z-index: 0;
 }
+
+#allPage{
+    position: relative;
+    z-index: 2;
+}
+
 
 
 .section2 {
