--- a/style.css
+++ b/style.css
@@ -175,9 +175,16 @@ p{
 .section2{
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 85px;
     justify-content: center;
 
+    margin-left: auto;
+    margin-right: auto;
+}
+@media (max-width: 1768px) {
+    .section2 {
+        width: 802px;
+    }
 }
 
 .portfolio{
@@ -319,6 +326,75 @@ body.light-mode footer {
     box-shadow: none;
 }
 
+/* From Uiverse.io by boryanakrasteva */
+.btn {
+    width: 200px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border: none;
+    position: relative;
+    background-color: transparent;
+    transition: .2s cubic-bezier(0.19, 1, 0.22, 1);
+    opacity: 0.6;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 0 0 10px;
+}
+
+.btn::after {
+    content: '';
+    border-bottom: 3px double rgb(255, 255, 255);
+    width: 0;
+    height: 100%;
+    position: absolute;
+    margin-top: -5px;
+    top: 0;
+    left: 5px;
+    visibility: hidden;
+    opacity: 1;
+    transition: .2s linear;
+}
+
+.btn .icon {
+    transform: translateX(0%);
+    transition: .2s linear;
+    animation: attention 1.2s linear infinite;
+
+}
+
+.btn:hover::after {
+    visibility: visible;
+    opacity: 0.7;
+    width: 90%;
+}
+
+.btn:hover {
+    letter-spacing: 2px;
+    opacity: 1;
+    cursor : pointer;
+}
+
+.btn:hover > .icon {
+    transform: translateX(30%);
+    animation: none;
+}
+
+@keyframes attention {
+    0% {
+        transform: translateX(0%);
+    }
+
+    50% {
+        transform: translateX(30%);
+    }
+}
+
+
 .waveContainer svg {
     display: block;
     margin: 0;
@@ -327,7 +403,19 @@ body.light-mode footer {
 }
 
 
+#projectPage{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 96px;
+    justify-content: center;
+    padding-top: 34px;
+}
 
+.titleProjectList{
+    font-family: "holiday", sans-serif;
+    font-weight: 100;
+    letter-spacing: 8px;
+}
 
 .presentationContainer{
     display: flex;
@@ -359,7 +447,7 @@ body.light-mode footer {
 }
 .carousel-container {
     position: relative;
-    width: 257px;
+    width: 272px;
     /* ajuste selon ton design */
     margin: 30px auto;
     overflow: hidden;
@@ -367,13 +455,14 @@ body.light-mode footer {
 
 .carousel-track-container {
     overflow: hidden;
-    width: 97%;
+    width: 297px;
     margin-left: 25px;
     margin-right: 25px;
 }
 
 .carousel-track {
     display: flex;
+    width: 202px;
     transition: transform 0.4s ease;
 }
 
