--- a/style.css
+++ b/style.css
@@ -23,6 +23,18 @@ body {
     animation: slideInSoft 0.5s ease-out forwards;
 }
 
+.logoNav {
+    height: 50px;
+    width: 50px;
+    object-fit: scale-down;
+
+}
+
+.Logo {
+    width: 225px;
+   margin-left: 20px;
+}
+
 /* Animation d’entrée douce */
 @keyframes slideInSoft {
     from {
@@ -110,6 +122,7 @@ a{
 #clock {
     font-size: 18px;
     line-height: 1; /* Évite que le texte tire vers le bas */
+    width: 135px;
 }
 
 
@@ -276,6 +289,7 @@ body.light-mode footer {
     align-items: center; /* Aligne verticalement le clock et le toggle */
     gap: 10px; /* Espace horizontal entre les deux */
     font-family: "holiday", sans-serif;
+
 }
 /* From Uiverse.io by Madflows */
 .toggle-switch {
@@ -465,7 +479,7 @@ body.light-mode footer {
 }
 .carousel-container {
     position: relative;
-    width: 272px;
+    width: 298px;
     /* ajuste selon ton design */
     margin: 30px auto;
     overflow: hidden;
@@ -480,7 +494,7 @@ body.light-mode footer {
 
 .carousel-track {
     display: flex;
-    width: 202px;
+    width: 222px;
     transition: transform 0.4s ease;
 }
 
@@ -515,7 +529,7 @@ body.light-mode footer {
 
 
 .carousel-btn.left {
-    left: 10px;
+    left: 16px;
 
 }
 
