--- a/project.css
+++ b/project.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+@font-face {
+    font-family: 'holiday'; /* le nom que tu choisis pour la police */
+    src: url('./fonts/HolidayFree.otf') format('opentype'); /* chemin vers ton fichier */
+    font-weight: normal;
+    font-style: normal;
+}
 * {
     border: 0;
     box-sizing: border-box;
@@ -31,9 +39,7 @@ h1 {
 }
 
 .projecttitle {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+
     margin-bottom: 20px;
 }
 
@@ -44,7 +50,7 @@ h1 {
     align-items: center;
     gap: 0;
     width: 100%;
-    height: min-content;
+    height: 575px;
     padding: 0;
     display: flex;
     position: relative;
@@ -52,6 +58,7 @@ h1 {
     max-width: 1161px;
     max-height: 697px;
     margin: 0 auto;
+    border-radius: 40px;
 }
 
 .image1{
@@ -65,15 +72,117 @@ h1 {
 }
 
 .titletext{
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-size: 50px;
+    font-weight: 500;
 
 }
 
 .subtitleProject {
     color: rgb(166, 166, 166);
-    transform: translateY(59px);
+    font-size: 32px;
 }
 
-.subtitleProject {
+.imageprincipalGrizlly {
+    border-radius: 40px;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;       /* Ajuste l’image sans déformation */
+    object-position: center -120px;
+}
 
+.informationsProject {
+    display: flex;
+    justify-content: space-between;
+    gap: 500px;
+    margin-top: 40px;
+    margin-right: 250px;
+    font-family: 'Oswald', sans-serif;
+    padding: 0 20px 200px;
+}
+
+.informationsProjectLeft {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex: 1;
+    margin-left: 150px;
+}
+.informationsProjectRight {
+    width: 523px;
+}
+
+
+.projecttitleGrizzlys {
+    margin-bottom: 20px;
+    margin-left: 150px;
+}
+
+.infoMiniTitle {
+    font-size: 25px;
+}
+
+.infoMiniTitle {
+    font-size: 15px;
+}
+
+.colorOrangeGrise{
+    background-color: #d5bd8f;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+}
+
+.colorBlanc{
+    background-color: #f5f5f5;
+    height: 100px;
+    width: 100px;
+    border-radius: 100%;
+    border: 3px solid #000000;
+}
+
+.colorNoir {
+    background-color: #000000;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    border: 2px solid #ffffff;
+}
+
+.logoGrizzlys{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+
+.imgLogoGrizzllys{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+
+.colorsProjectGrizzlys {
+    display: flex;
+    gap: 30px;
+    margin-top: 10px;
+    position: absolute;
+    right: 333px;
+    bottom: 30px;
+}
+
+
+
+.imgFleche{
+    width: 135px;
+    height: 75px;
+    object-fit: contain;
+    transform: rotateZ(229deg);
+}
+
+.TextLogo {
+    font-family: 'holiday', cursive;
+    letter-spacing: 4px;
+    font-size: 34px;
+    margin-top: 10px;
 }
