--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ a{
     font-size: 18px;
     text-align: center;
     width: 135px;
-    transform: translatey(2px);
+    transform: translateY(7px);
 }
 
 
