--- a/project.css
+++ b/project.css
@@ -326,6 +326,10 @@ h1 {
     justify-content: center;
     padding-bottom: 100px;
 }
+body.light-mode .flyers img {
+    box-shadow: 0 5px 15px rgba(0,0,0,0.35);
+}
+
 
 .textFlyerGrizzlys {
     font-family: 'Oswald', sans-serif;
@@ -356,5 +360,12 @@ h1 {
 
 .creaGrid:hover {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), transparent);
-    opacity: 50%;
+
+}
+
+.logoEcritGrizzlys {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    padding-top: 50px;
 }
