--- a/project.css
+++ b/project.css
@@ -123,9 +123,7 @@ h1 {
     font-size: 25px;
 }
 
-.infoMiniTitle {
-    font-size: 15px;
-}
+
 
 .colorOrangeGrise{
     background-color: #d5bd8f;
@@ -288,7 +286,7 @@ h1 {
 .group {
     display: flex;
     gap: 0; /* On colle les images */
-    animation: scrolling 6s steps(3) infinite; /* 3 images, 2s par image */
+    animation: scrolling 6s steps(4) infinite; /* 3 images, 2s par image */
 }
 
 @keyframes scrolling {
@@ -310,7 +308,6 @@ h1 {
 
 .videoInsta {
     display: flex;
-    flex-direction: column;
     margin-left: 200px;
     position: relative; /* IMPORTANT : pour que le bouton se positionne par rapport à la vidéo */
     width: 445px;
@@ -318,7 +315,9 @@ h1 {
 
 .hautInsta {
     width: 445px;
-    transform: translateY(4px);
+    transform: translateY(3px);
+    height: 42px;
+    object-fit: cover;
 }
 
 
@@ -379,6 +378,13 @@ body.light-mode .flyers img {
     padding-bottom: 100px;
 }
 
+.titlePublication{
+    font-family: 'holiday', sans-serif;
+    font-size: 32px;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 50px;
+}
 .imgGrid{
     display: flex;
     flex-wrap: wrap;
@@ -395,9 +401,50 @@ body.light-mode .flyers img {
     border-radius: 8px;
 }
 
-.creaGrid:hover {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), transparent);
 
+.divCreaGrid {
+    position: relative;
+    width: 300px;
+    height: 375px;
+    border-radius: 8px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.divCreaGrid:hover {
+    transform: scale(1.05); /* léger zoom au hover */
+}
+
+.textHover {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 10px 20px;
+    border-radius: 5px;
+    opacity: 0; /* invisible par défaut */
+    transition: opacity 0.3s ease;
+    pointer-events: none;
+}
+
+.divCreaGrid:hover .textHover {
+    opacity: 1; /* visible au hover */
+}
+
+
+
+.creaGrid:hover{
+    opacity: 40%;
+}
+
+
+.divCreaGrid:hover{
+    background: linear-gradient(180deg,rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.84) 75%,rgba(0,0,0,0.75) 90% , rgba(0, 0, 0, 0.34) 100%);
+    border-radius: 8px;
 }
 
 .logoEcritGrizzlys {
@@ -437,3 +484,45 @@ body.light-mode .flyers img {
     color: white; /* pour que le SVG soit visible sur fond sombre */
 }
 
+.textReel{
+    max-width: 302px;
+    padding-top: 150px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 18px;
+}
+
+.containerReel{
+    display: flex;
+    gap: 400px
+}
+
+.containerTrophy{
+    display: flex;
+    gap: 20px;
+
+}
+.textTrophy{
+    font-family: 'Oswald', sans-serif;
+    font-size: 18px;
+    width: 262px;
+}
+.trophy{
+    display: flex;
+}
+
+.trophy .imgFleche {
+    transform: rotate(243deg) translateX(43px) translateY(17px) scale(1.5);
+}
+
+.imgTrophy{
+    width: 120px;
+    height: auto;
+    object-fit: cover;
+    transform: rotate(347deg) translateX(26px) translateY(-23px);
+}
+
+.containerTextTrophy{
+    display: flex;
+    flex-direction: column;
+    gap: 250px
+}
