--- a/project.css
+++ b/project.css
@@ -235,7 +235,10 @@ body.light-mode .imgLogoCienfuegos{
     margin-top: 55px;
 }
 
-
+.flecheCatalattitude {
+    margin-right: 78px;
+    margin-top: 67px;
+}
 
 .imgFleche{
     width: 135px;
@@ -244,6 +247,22 @@ body.light-mode .imgLogoCienfuegos{
     transform: rotateZ(229deg);
     color : #ffffff;
     filter: invert(1);
+}
+
+.imgFlecheCatalattitude{
+    width: 135px;
+    height: 75px;
+    object-fit: contain;
+    transform: rotateZ(229deg);
+    color : #ffffff;
+    filter: invert(1);
+}
+
+.TextLogoCatalatitude {
+    font-family: 'holiday', cursive;
+    letter-spacing: 4px;
+    font-size: 34px;
+    margin-top: 10px;
 }
 
 .TextLogo {
@@ -846,4 +865,13 @@ body.light-mode .imgLogoCienfuegos{
     color: #000;
     white-space: nowrap;
     line-height: 1.2;
+}
+
+.grostitre{
+    font-family: 'Oswald', sans-serif;
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 150px;
+    margin-top: 150px;
+    color: #a91f32;
 }
